--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,30 @@ form[action$="destroy"] button {
   width: 100%;
 }
 
+.search-form {
+  position: relative;
+}
+
+#search {
+  padding-left: 30px;
+
+}
+
+input#search[type="search"] {
+  width: 100%;
+  padding-left: 2rem;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 0.625rem 0.75rem;
+  background-size: 1rem;
+  position: relative;
+}
+
+input#search[type="search"].loading {
+  background-image: none;
+}
+
+
 #sidebar {
   width: 22rem;
   background-color: #f7f7f7;
